upgrade jquery and tapestry